--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "electron": "^7.1.11",
     "electron-pdf-window": "^1.0.12"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.19.2"
+  }
 }
