--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
       -v ~/.cache/electron:/root/.cache/electron \
       -v ~/.cache/electron-builder:/root/.cache/electron-builder \
       electronuserland/builder:wine \
-      /bin/bash -c "npm ci && npm run dist --linux --win"
+      /bin/bash -c "snap install snapcraft --classic && npm ci && npm run dist --linux --win"
   else
     npm run dist
   fi
