--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "build": {
     "appId": "com.rmzs.app",
+    "productName": "Rood met Zwarte Stippen",
     "mac": {
       "category": "public.app-category.business",
       "icon": "img/icon.png"
