--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,18 @@ cache:
   - "$HOME/.cache/electron"
   - "$HOME/.cache/electron-builder"
 script:
-- |
-   if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+  - |
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       docker run --rm \
         --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
         -v ${PWD}:/project \
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-      /bin/bash -c "npm ci && npm run dist:win"
-  else
-    npm run dist
-  fi
+        /bin/bash -c "npm i && npm run dist:win"
+    else
+      npm run dist
+    fi
 before_cache:
 - rm -rf $HOME/.cache/electron-builder/wine
 branches:
