--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cryptr": "^6.0.1",
     "electron-log": "^4.1.0",
     "electron-pdf-window": "^1.0.12",
+    "jquery": "^3.4.1",
     "pdf-lib": "^1.4.1",
     "update-electron-app": "^1.5.0"
   }
