--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@pdf-lib/fontkit": "0.0.4",
+    "a-color-picker": "^1.2.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "cryptr": "^6.0.1",
