--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "build": {
     "appId": "com.rmzs.app",
+    "publish": [
+      "github"
+    ],
     "productName": "Rood met Zwarte Stippen",
     "mac": {
       "category": "public.app-category.business",
@@ -39,7 +42,6 @@
     "electron-log": "^4.1.0",
     "electron-pdf-window": "^1.0.12",
     "jquery": "^3.4.1",
-    "pdf-lib": "^1.4.1",
-    "update-electron-app": "^1.5.0"
+    "pdf-lib": "^1.4.1"
   }
 }
