--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "cryptr": "^6.0.1",
+    "electron-context-menu": "^2.0.0",
     "electron-log": "^4.1.0",
     "electron-pdf-window": "^1.0.12",
     "jquery": "^3.4.1",
